--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,21 @@
     transform: rotate(360deg);
   }
 }
+
+table {
+  border: 1px solid white;
+  border-collapse: collapse;
+}
+
+table tr td, th {
+  border: 1px solid white;
+  padding: 16px;
+}
+
+a {
+  color: aqua;
+}
+
+a:visited {
+  color: lightgray;
+}
