Complete header and style

--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,16 @@
     transform: rotate(360deg);
   }
 }
+
+table {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  border-collapse: collapse;
+}
+
+table tr td, th {
+  padding: 8px 16px;
+  border: 1px solid black;
+}
